--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/plugins/qgSurf" >
         <file>icons/qgsurf.png</file>
+        <file>icons/bestfitplane.png</file>		
         <file>icons/sin_m.png</file>
         <file>icons/sin_def_m.png</file>
         <file>icons/about.png</file>	
