Configuration started; minor utils removed

--- a/resources.qrc
+++ b/resources.qrc
@@ -2,8 +2,7 @@
     <qresource prefix="/plugins/qgSurf" >
         <file>icons/qgsurf.png</file>
         <file>icons/bestfitplane.png</file>		
-        <file>icons/sin_m.png</file>
-        <file>icons/sin_def_m.png</file>
+        <file>icons/stereoplot.png</file>
         <file>icons/about.png</file>	
     </qresource>
 </RCC>
