--- a/solution_notes.ui
+++ b/solution_notes.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>beePen - note</string>
+   <string>qgSurf - note</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -20,8 +20,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>20</y>
+     <x>300</x>
+     <y>90</y>
      <width>81</width>
      <height>241</height>
     </rect>
@@ -33,7 +33,46 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="label0">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>100</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Comments</string>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="comments">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>130</y>
+     <width>241</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <property name="documentTitle">
+    <string>qgSurf - note</string>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>50</y>
+     <width>241</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="documentTitle">
+    <string>qgSurf - note</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -43,20 +82,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Note to enter</string>
-   </property>
-  </widget>
-  <widget class="QPlainTextEdit" name="note_plainTextEdit">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>50</y>
-     <width>241</width>
-     <height>171</height>
-    </rect>
-   </property>
-   <property name="documentTitle">
-    <string>beePen - note</string>
+    <string>Label</string>
    </property>
   </widget>
  </widget>
