--- a/resources.qrc
+++ b/resources.qrc
@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/plugins/qgSurf" >
         <file>icons/qgsurf.png</file>
-        <file>icons/bestfitplane.png</file>		
+        <file>icons/bestfitplane.png</file>	
+        <file>icons/PointsPlaneDistances.png</file>
         <file>icons/stereoplot.png</file>
         <file>icons/about.png</file>	
     </qresource>
